Add Instagram account type selector
